@startuml domino_db_schema
entity tile {
  string: PK tile_id
  number: left_halve
  number: right_halve
}

entity tile_placement {
  string: PK FK collection_id
  string: PK FK tile_id
  number: position
}

entity collection {
  string: PK collection_id
  number: len
  number: n
}
note right of collection: This a generalization of both sequences and puzzles

entity sequence {
  string: FK collection_id
  string: PK sequence_id
}

entity puzzle {
  string: FK collection_id
  string: PK puzzle_id
  string: option<solved_by_sequence_id>
}

sequence "0..1"--"0..many" puzzle: "solved_by"
collection "1"--|>"1" sequence : "collection"
collection "1"--|>"1" puzzle : "collection"
collection "many"--"many" tile_placement : "placement"
tile_placement "many"--"many" tile : "placement"
@enduml